--- a/index.html
+++ b/index.html
@@ -28,9 +28,19 @@
         </form>
       </section>
       <section id="features">
-        <div class="feature"></div>
-        <div class="feature"></div>
-        <div class="feature"></div>
+        <div class="feature">
+          <h1>Premium Materials</h1>
+          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase</p>
+          
+        </div>
+        <div class="feature">
+          <h1>Fast Shipping</h1>
+          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+        </div>
+        <div class="feature">
+          <h1>Quality Assurance</h1>
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+        </div>
       </section>
       <section id="how_it_works">
         <iframe id="video" src="https://www.youtube.com/embed/pQN-pnXPaVg"></iframe>
